Fix bug with condensed button styles on mobile

--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -62,7 +62,10 @@ hr {
     &--centered {
       display: block;
       margin: 1rem auto;
-      max-width: 15%;
+
+      @include tablet-up {
+        max-width: 9rem;
+      }
     }
   }
 }
